--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,26 +17,30 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_user" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_empty"
+        android:layout_width="288dp"
+        android:layout_height="288dp"
+        app:lottie_rawRes="@raw/user_notfound"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:visibility="gone"
-        android:text="@string/txt_user_not_found"
-        style="@style/Text.Black.TittleItemUsername"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/pb_user"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:visibility="gone"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
