--- a/app/src/main/res/layout/fragment_user_repository.xml
+++ b/app/src/main/res/layout/fragment_user_repository.xml
@@ -17,17 +17,19 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_repository" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:visibility="gone"
-        android:text="@string/txt_data_empty"
-        style="@style/Text.Black.TittleItemUsername"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_empty"
+        android:layout_width="288dp"
+        android:layout_height="288dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.104"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/no_data" />
 
     <ProgressBar
         android:id="@+id/pb_user"
@@ -35,8 +37,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="80dp"
         android:visibility="gone"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/colorSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
